fixing overflow on mobile view navigational

--- a/src/components/styles/NavigationalWarnings.css
+++ b/src/components/styles/NavigationalWarnings.css
@@ -43,6 +43,7 @@
         margin-top:25px;
         flex-direction: column; /* Stack warnings vertically */
         height: auto;
+        overflow: hidden;
     }
 
     .NavigationalDisplay .warning {
